<resources>
    <string name="app_name">ExpenceTraker</string>
    <string name="app_logo">App Logo</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="total_balance_0_00">Total Balance: ₹0.00</string>
    <string name="income_0_00">Income: ₹0.00</string>
    <string name="expenses_0_00">Expenses: ₹0.00</string>
    <string name="logout">Logout</string>
</resources>